[package]
name = "dioptre"
version = "0.1.0"
authors = ["Russell Johnston <rpjohnst@gmail.com>"]
edition = "2018"
description = "Struct field projection tools"
repository = "https://github.com/driveyard/driveyard"
readme = "README.md"
categories = ["data-structures", "rust-patterns"]
license = "MIT/Apache-2.0"

[dependencies]
dioptre-derive = { path = "dioptre-derive", version = "0.1" }
