[package]
name = "soak-derive"
version = "0.1.0"
authors = ["Russell Johnston <rpjohnst@gmail.com>"]
edition = "2018"
description = "Custom derive macro for #[derive(Columns)]"
repository = "https://github.com/driveyard/driveyard"
keywords = ["memory", "layout", "struct-of-arrays", "columnar"]
categories = ["data-structures", "memory-management"]
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
quote = "0.6"
proc-macro2 = "0.4"
